<resources>
    <string name="app_name">TyohaarConsole</string>
    <string name="select_profile">Select Your Profile</string>

    <string name="select_admin">ADMIN</string>
    <string name="select_cc_proc_lead">CC Procurement lead</string>
    <string name="select_cc_supervisor">CC Supervisor</string>
    <string name="select_apmc_proc_lead">APMC Proc Lead</string>
    <string name="select_fc_supervisor">FC Supervisor</string>
    <string name="select_cc_vehicle_driver">CC Vehicle Driver</string>
    <string name="select_fc_vehicle_driver">FC Vehicle Driver</string>
    <string name="select_shop_staff">Shop Staff</string>
    <string name="select_office_proc_supervisor">Office Proc Supervisor</string>
    <string name="select_continue">CONTINUE</string>

</resources>
