<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#213236"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/select_profile"
            android:textColor="#ffffff"
            android:textSize="30sp"
            app:fontFamily="@font/ubuntu_bold" />

    </LinearLayout>

    <ScrollView
        android:layout_weight="2.5"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/select_admin"
                android:onClick="onClickAdmin"
                app:fontFamily="@font/ubuntu_bold"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/select_apmc_proc_lead"
                app:fontFamily="@font/ubuntu_bold"
                android:onClick="onClickAPMC"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/select_cc_proc_lead"
                app:fontFamily="@font/ubuntu_bold"
                android:onClick="onClickCCProc"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/select_cc_supervisor"
                app:fontFamily="@font/ubuntu_bold"
                android:onClick="onClickCCSupervisor"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/select_cc_vehicle_driver"
                app:fontFamily="@font/ubuntu_bold"
                android:onClick="onClickCCVehicleDriver"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/select_fc_supervisor"
                app:fontFamily="@font/ubuntu_bold"
                android:onClick="onClickFCSupervisor"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/select_fc_vehicle_driver"
                app:fontFamily="@font/ubuntu_bold"
                android:onClick="onClickFCVehicleDriver"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/select_office_proc_supervisor"
                app:fontFamily="@font/ubuntu_bold"
                android:onClick="onClickOfficeprocSupervisor"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/select_shop_staff"
                app:fontFamily="@font/ubuntu_bold"
                android:layout_marginTop="20dp"
                android:onClick="onClickShopStaff"
                android:layout_marginBottom="40dp"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>